--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="draw.png" />
-        <link rel="stylesheet" href="assets/stylesheets/styles.css">
+        <link rel="stylesheet" href="/stylesheets/styles.css">
     </head>
     <body>
         <div id="root">
